@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.5.9
+VERSION=1.6.0
 
-DEPENDENCY="zeda=1.3.1;zm=1.2.19"
+DEPENDENCY="zeda=1.4.0;zm=1.2.19"
