@@ -120,8 +120,6 @@ __EXPORT void zTerraZRange(zTerra *terra, double *zmin, double *zmax);
 /*! \brief estimate z-value at a given horizontal place of an elevation map. */
 __EXPORT double zTerraZ(zTerra *terra, double x, double y);
 
-/*! \brief register a definition of tag-and-keys for a 3D polyhedron cylinder to a ZTK format processor. */
-__EXPORT bool zTerraRegZTK(ZTK *ztk, char *tag);
 /*! \brief read a terrain elevation map from a ZTK format processor. */
 __EXPORT zTerra *zTerraFromZTK(zTerra *terra, ZTK *ztk);
 
